8219642: ciReplay loads wrong data when MethodData size changes

Reviewed-by: kvn, thartmann